--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~6.1.1",
     "expo": "~54.0.1",
+    "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.7",
     "react": "19.1.0",
-    "react-native": "0.81.4",
-    "expo-sqlite": "~16.0.8",
     "react-dom": "19.1.0",
-    "react-native-web": "^0.21.0",
-    "@expo/metro-runtime": "~6.1.1"
+    "react-native": "0.81.4",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-paper": "^5.14.5",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-web": "^0.21.0"
   },
   "private": true
 }
