feat: Enhance character management UI and functionality
- Updated dependencies in package.json for improved performance and features.
- Refactored AddCharacterForm to include new input fields for character class, element, and NEX with animations on button press.
- Improved CharacterCard to display additional character details and enhanced visual elements with icons and styling.
- Redesigned Header component to utilize custom fonts and improved styling for better aesthetics.
- Added README.md to document usability and visual improvements, including confirmation modal for adding characters, character filtering options, and animations for adding/removing characters.

--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~6.1.1",
-    "expo": "~54.0.1",
+    "@expo-google-fonts/bebas-neue": "^0.4.1",
+    "@expo/metro-runtime": "~6.1.2",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-picker/picker": "^2.11.2",
+    "expo": "^54.0.8",
+    "expo-app-loading": "^2.1.1",
+    "expo-asset": "^12.0.8",
     "expo-sqlite": "~16.0.8",
-    "expo-status-bar": "~3.0.7",
+    "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0"
   },
   "private": true
